--- a/index.html
+++ b/index.html
@@ -2,139 +2,127 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Опросный лист по техпроцессу</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    .hidden { display: none; }
-    .block { margin-bottom: 20px; }
-    input, select, textarea { width: 100%; padding: 5px; margin-top: 5px; }
-    table { width: 100%; margin-top: 10px; border-collapse: collapse; }
-    td, th { border: 1px solid #ccc; padding: 5px; }
+    .element-row { display: flex; gap: 10px; margin-bottom: 10px; }
+    .element-row input { flex: 1; }
+    .element-row button { white-space: nowrap; }
   </style>
 </head>
 <body>
 
-  <h2>Опросный лист по техпроцессу</h2>
-
+<div class="container mt-4">
+  <h2 class="mb-4">Опросный лист по техпроцессу</h2>
   <form id="form">
-    <div class="block">
-      <label>Анализируемый материал</label>
-      <select id="material" name="material" onchange="toggleMaterialBlocks()" required>
+
+    <div class="mb-3">
+      <label for="material" class="form-label">Анализируемый материал</label>
+      <select id="material" name="material" class="form-select" required>
         <option value="">Выберите...</option>
         <option value="шихта">Шихта</option>
         <option value="пульпа">Пульпа</option>
       </select>
     </div>
 
-    <div class="block">
-      <label>Название компании</label>
-      <input type="text" name="company" required>
+    <div class="mb-3">
+      <label for="company" class="form-label">Название компании</label>
+      <input type="text" id="company" name="company" class="form-control" required>
     </div>
 
-    <div class="block">
-      <label>Ваше ФИО</label>
-      <input type="text" name="fio" required>
+    <div class="mb-3">
+      <label for="fio" class="form-label">Ваше ФИО</label>
+      <input type="text" id="fio" name="fio" class="form-control" required>
     </div>
 
-    <div class="block">
-      <label>Ваша должность</label>
-      <input type="text" name="position">
+    <div class="mb-3">
+      <label for="position" class="form-label">Должность</label>
+      <input type="text" id="position" name="position" class="form-control">
     </div>
 
-    <div class="block">
-      <label>Email</label>
-      <input type="email" name="email" required>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" id="email" name="email" class="form-control" required>
     </div>
 
-    <div class="block">
-      <label>Телефон</label>
-      <input type="tel" name="phone">
+    <div class="mb-3">
+      <label for="phone" class="form-label">Телефон</label>
+      <input type="tel" id="phone" name="phone" class="form-control">
     </div>
 
-    <div class="block">
-      <label>Оборудование, рассматриваемое для решения задачи</label>
-      <textarea name="equipment"></textarea>
+    <div class="mb-3">
+      <label for="equipment" class="form-label">Оборудование</label>
+      <textarea id="equipment" name="equipment" class="form-control" rows="3"></textarea>
     </div>
 
-    <div class="block">
-      <label>Конфигурация системы анализа</label>
-      <select name="analysis_config">
-        <option value="A">A) 1 анализатор и система доставки пробы</option>
-        <option value="B">B) Централизованная доставка проб</option>
+    <div class="mb-3">
+      <label for="analysis_config" class="form-label">Конфигурация анализа</label>
+      <select id="analysis_config" name="analysis_config" class="form-select">
+        <option value="A">A) Один анализатор и доставка</option>
+        <option value="B">B) Централизованная доставка</option>
       </select>
     </div>
 
-    <div class="block">
-      <label>Основные элементы и диапазоны (0,1–70%)</label>
-      <table id="main-elements">
-        <thead><tr><th>Элемент</th><th>Диапазон</th><th></th></tr></thead>
-        <tbody></tbody>
-      </table>
-      <button type="button" onclick="addElementRow('main-elements')">+ Добавить</button>
+    <div class="mb-3">
+      <label class="form-label">Основные элементы</label>
+      <div id="main-elements"></div>
+      <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('main-elements')">+ Добавить</button>
     </div>
 
-    <div class="block">
-      <label>Дополнительные элементы и диапазоны (0,1–70%)</label>
-      <table id="additional-elements">
-        <thead><tr><th>Элемент</th><th>Диапазон</th><th></th></tr></thead>
-        <tbody></tbody>
-      </table>
-      <button type="button" onclick="addElementRow('additional-elements')">+ Добавить</button>
+    <div class="mb-3">
+      <label class="form-label">Дополнительные элементы</label>
+      <div id="additional-elements"></div>
+      <button type="button" class="btn btn-outline-secondary btn-sm" onclick="addElementRow('additional-elements')">+ Добавить</button>
     </div>
 
-    <div class="block">
-      <label>Максимальное время измерения (сек)</label>
-      <input type="number" name="measuring_time">
+    <div class="mb-3">
+      <label for="measuring_time" class="form-label">Время измерения (сек)</label>
+      <input type="number" id="measuring_time" name="measuring_time" class="form-control">
     </div>
 
-    <div class="block">
-      <label>Источник рентгеновского излучения</label>
-      <input type="text" name="radiation_source">
+    <div class="mb-3">
+      <label for="radiation_source" class="form-label">Источник излучения</label>
+      <input type="text" id="radiation_source" name="radiation_source" class="form-control">
     </div>
 
-    <div class="block">
-      <label>Температура на месте установки (°C)</label>
-      <input type="text" name="temperature_range">
+    <div class="mb-3">
+      <label for="temperature_range" class="form-label">Температура установки (°C)</label>
+      <input type="text" id="temperature_range" name="temperature_range" class="form-control">
     </div>
 
-    <div class="block">
-      <label>Перепад температуры в течение года (°C)</label>
-      <input type="text" name="temperature_variation">
+    <div class="mb-3">
+      <label for="temperature_variation" class="form-label">Перепад температуры (°C)</label>
+      <input type="text" id="temperature_variation" name="temperature_variation" class="form-control">
     </div>
 
-    <div class="block">
-      <label>Место установки анализатора</label>
-      <textarea name="installation_place"></textarea>
+    <div class="mb-3">
+      <label for="installation_place" class="form-label">Место установки</label>
+      <textarea id="installation_place" name="installation_place" class="form-control" rows="2"></textarea>
     </div>
 
-    <div class="block">
-      <label>Схема или чертеж установки (укажите путь или загрузку отдельно)</label>
-      <input type="text" name="drawing_link">
+    <div class="mb-3">
+      <label for="drawing_link" class="form-label">Ссылка на схему</label>
+      <input type="text" id="drawing_link" name="drawing_link" class="form-control">
     </div>
 
-    <button type="submit">Отправить</button>
+    <button type="submit" class="btn btn-primary">Отправить</button>
   </form>
+</div>
 
-  <script>
-    function addElementRow(tableId) {
-      const row = document.createElement("tr");
-      row.innerHTML = `
-        <td><input type="text" name="${tableId}_element[]"></td>
-        <td><input type="text" name="${tableId}_range[]"></td>
-        <td><button type="button" onclick="this.closest('tr').remove()">✖</button></td>
-      `;
-      document.querySelector(`#${tableId} tbody`).appendChild(row);
-    }
-
-    function toggleMaterialBlocks() {
-      // Здесь можно реализовать логику отображения блоков в зависимости от "шихта/пульпа"
-    }
-
-    document.getElementById("form").addEventListener("submit", function(e) {
-      e.preventDefault();
-      alert("Форма отправлена! (интеграция с сервером — на следующем шаге)");
-    });
-  </script>
+<script>
+  function addElementRow(containerId) {
+    const container = document.getElementById(containerId);
+    const row = document.createElement('div');
+    row.className = 'element-row';
+    row.innerHTML = `
+      <input type="text" name="${containerId}_element[]" placeholder="Элемент" class="form-control">
+      <input type="text" name="${containerId}_range[]" placeholder="Диапазон (%)" class="form-control">
+      <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">✖</button>
+    `;
+    container.appendChild(row);
+  }
+</script>
 
 </body>
 </html>
