--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     .element-row { display: flex; gap: 10px; margin-bottom: 10px; }
     .element-row input { flex: 1; }
     .element-row button { white-space: nowrap; }
+    .analyzer-section { display: none; margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 5px; background-color: #f9f9f9; }
   </style>
 </head>
 <body>
@@ -17,111 +18,55 @@
   <h2 class="mb-4">Опросный лист по техпроцессу</h2>
   <form id="form">
 
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <label for="material" class="form-label">Анализируемый материал</label>
-        <select id="material" name="material" class="form-select" required>
-          <option value="">Выберите...</option>
-          <option value="шихта">Шихта</option>
-          <option value="пульпа">Пульпа</option>
-        </select>
-      </div>
-      <div class="col-md-6">
-        <label for="analyzer_type" class="form-label">Тип анализатора</label>
-        <select id="analyzer_type" name="analyzer_type" class="form-select" required>
-          <option value="">Выберите...</option>
-          <option value="лазерный">Лазерный</option>
-          <option value="рентгеновский">Рентгеновский</option>
-          <option value="инфракрасный">Инфракрасный</option>
-        </select>
-      </div>
-    </div>
-
     <div class="mb-3">
-      <label for="company" class="form-label">Название компании</label>
-      <input type="text" id="company" name="company" class="form-control" required>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <label for="fio" class="form-label">Ваше ФИО</label>
-        <input type="text" id="fio" name="fio" class="form-control" required>
-      </div>
-      <div class="col-md-6">
-        <label for="position" class="form-label">Должность</label>
-        <input type="text" id="position" name="position" class="form-control">
-      </div>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" name="email" class="form-control" required>
-      </div>
-      <div class="col-md-6">
-        <label for="phone" class="form-label">Телефон</label>
-        <input type="tel" id="phone" name="phone" class="form-control">
-      </div>
-    </div>
-
-    <div class="mb-3">
-      <label for="equipment" class="form-label">Оборудование</label>
-      <textarea id="equipment" name="equipment" class="form-control" rows="2"></textarea>
-    </div>
-
-    <div class="mb-3">
-      <label for="analysis_config" class="form-label">Конфигурация системы анализа</label>
-      <select id="analysis_config" name="analysis_config" class="form-select">
-        <option value="A">A) Один анализатор и доставка</option>
-        <option value="B">B) Централизованная доставка</option>
+      <label for="material" class="form-label">Тип анализируемого материала</label>
+      <select id="material" name="material" class="form-select" required>
+        <option value="">Выберите...</option>
+        <option value="пульпа">Пульпа (1–3 потока для анализа)</option>
+        <option value="шихта">Шихта / руда</option>
+        <option value="пульпа_мультиплексор">Пульпа с мультиплексором</option>
+        <option value="пульпа_курьер">Пульпа с мультиплексором (на замену анализатора Курьер)</option>
       </select>
     </div>
 
-    <div class="mb-3">
-      <label class="form-label">Основные элементы</label>
-      <div id="main-elements"></div>
-      <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('main-elements')">+ Добавить</button>
-    </div>
-
-    <div class="mb-3">
-      <label class="form-label">Дополнительные элементы</label>
-      <div id="additional-elements"></div>
-      <button type="button" class="btn btn-outline-secondary btn-sm" onclick="addElementRow('additional-elements')">+ Добавить</button>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <label for="measuring_time" class="form-label">Максимальное время измерения (сек)</label>
-        <input type="number" id="measuring_time" name="measuring_time" class="form-control">
+    <div id="section-пульпа" class="analyzer-section">
+      <h5>Пульпа: параметры для 1–3 потоков</h5>
+      <div class="mb-3">
+        <label for="streams" class="form-label">Количество потоков</label>
+        <input type="number" class="form-control" name="streams">
       </div>
-      <div class="col-md-6">
-        <label for="radiation_source" class="form-label">Источник излучения</label>
-        <input type="text" id="radiation_source" name="radiation_source" class="form-control">
+      <div class="mb-3">
+        <label class="form-label">Основные элементы</label>
+        <div id="main-elements"></div>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('main-elements')">+ Добавить</button>
       </div>
     </div>
 
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <label for="temperature_range" class="form-label">Температура установки (°C)</label>
-        <input type="text" id="temperature_range" name="temperature_range" class="form-control">
-      </div>
-      <div class="col-md-6">
-        <label for="temperature_variation" class="form-label">Перепад температуры (°C)</label>
-        <input type="text" id="temperature_variation" name="temperature_variation" class="form-control">
+    <div id="section-шихта" class="analyzer-section">
+      <h5>Шихта / руда</h5>
+      <div class="mb-3">
+        <label class="form-label">Оборудование дробления/подачи</label>
+        <textarea name="equipment_feed" class="form-control"></textarea>
       </div>
     </div>
 
-    <div class="mb-3">
-      <label for="installation_place" class="form-label">Место установки анализатора</label>
-      <textarea id="installation_place" name="installation_place" class="form-control" rows="2"></textarea>
+    <div id="section-пульпа_мультиплексор" class="analyzer-section">
+      <h5>Пульпа с мультиплексором</h5>
+      <div class="mb-3">
+        <label class="form-label">Количество потоков</label>
+        <input type="number" name="multiplex_streams" class="form-control">
+      </div>
     </div>
 
-    <div class="mb-3">
-      <label for="drawing_link" class="form-label">Ссылка на чертёж / схему установки</label>
-      <input type="text" id="drawing_link" name="drawing_link" class="form-control">
+    <div id="section-пульпа_курьер" class="analyzer-section">
+      <h5>Пульпа с мультиплексором (Курьер)</h5>
+      <div class="mb-3">
+        <label class="form-label">Место установки нового анализатора</label>
+        <input type="text" name="kurier_location" class="form-control">
+      </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Отправить</button>
+    <button type="submit" class="btn btn-primary mt-3">Отправить</button>
   </form>
 </div>
 
@@ -137,6 +82,14 @@
     `;
     container.appendChild(row);
   }
+
+  document.getElementById('material').addEventListener('change', function() {
+    const sections = document.querySelectorAll('.analyzer-section');
+    sections.forEach(s => s.style.display = 'none');
+    const selected = this.value;
+    const target = document.getElementById(`section-${selected}`);
+    if (target) target.style.display = 'block';
+  });
 </script>
 
 </body>
