--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <label for="material" class="form-label">Тип анализируемого материала</label>
       <select id="material" name="material" class="form-select" required>
         <option value="">Выберите...</option>
-        <option value="пульпа">Пульпа (1–3 потока для анализа)</option>
-        <option value="шихта">Шихта / руда</option>
-        <option value="пульпа_мультиплексор">Пульпа с мультиплексором</option>
-        <option value="пульпа_курьер">Пульпа с мультиплексором (на замену анализатора Курьер)</option>
+        <option value="pulp">Пульпа (1–3 потока для анализа)</option>
+        <option value="sinter">Шихта / руда</option>
+        <option value="multiplex">Пульпа с мультиплексором</option>
+        <option value="courier">Пульпа с мультиплексором (на замену анализатора Курьер)</option>
       </select>
     </div>
 
-    <div id="section-пульпа" class="analyzer-section">
+    <div id="section-pulp" class="analyzer-section">
       <h5>Пульпа: параметры для 1–3 потоков</h5>
       <div class="mb-3">
         <label for="streams" class="form-label">Количество потоков</label>
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div id="section-шихта" class="analyzer-section">
+    <div id="section-sinter" class="analyzer-section">
       <h5>Шихта / руда</h5>
       <div class="mb-3">
         <label class="form-label">Оборудование дробления/подачи</label>
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <div id="section-пульпа_мультиплексор" class="analyzer-section">
+    <div id="section-multiplex" class="analyzer-section">
       <h5>Пульпа с мультиплексором</h5>
       <div class="mb-3">
         <label class="form-label">Количество потоков</label>
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div id="section-пульпа_курьер" class="analyzer-section">
+    <div id="section-courier" class="analyzer-section">
       <h5>Пульпа с мультиплексором (Курьер)</h5>
       <div class="mb-3">
         <label class="form-label">Место установки нового анализатора</label>
