--- a/index.html
+++ b/index.html
@@ -18,6 +18,46 @@
   <h2 class="mb-4">Опросный лист по техпроцессу</h2>
   <form id="form">
 
+    <!-- Основные сведения -->
+    <div class="mb-4">
+      <h5>Основные сведения</h5>
+
+      <div class="mb-3">
+        <label for="date" class="form-label">Дата заполнения опросного листа</label>
+        <input type="date" id="date" name="date" class="form-control" required>
+      </div>
+
+      <div class="mb-3">
+        <label for="company" class="form-label">Название компании</label>
+        <input type="text" id="company" name="company" class="form-control" required>
+      </div>
+
+      <div class="mb-3">
+        <label for="contact_person" class="form-label">Контактное лицо</label>
+        <input type="text" id="contact_person" name="contact_person" class="form-control">
+      </div>
+
+      <div class="mb-3">
+        <label for="phone" class="form-label">Телефон</label>
+        <input type="tel" id="phone" name="phone" class="form-control">
+      </div>
+
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" name="email" class="form-control">
+      </div>
+
+      <div class="mb-3">
+        <label for="country" class="form-label">Страна</label>
+        <input type="text" id="country" name="country" class="form-control">
+      </div>
+
+      <div class="mb-3">
+        <label for="location" class="form-label">Местонахождение</label>
+        <input type="text" id="location" name="location" class="form-control">
+      </div>
+    </div>
+
     <div class="mb-3">
       <label for="material" class="form-label">Тип анализируемого материала</label>
       <select id="material" name="material" class="form-select" required>
@@ -92,6 +132,5 @@
   });
 </script>
 
-  
 </body>
 </html>
