--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div id="section-pulp" class="analyzer-section">
-      <h5>Пульпа: параметры для 1–3 потоков</h5>
+      <h5>Пульпа: оборудование</h5>
       <div class="mb-3">
         <label class="form-label">Количество точек для анализа</label>
         <input type="number" name="streams" class="form-control">
@@ -77,7 +77,6 @@
         </select>
       </div>
 
-      <!-- Напорный блок -->
       <div id="block-naporny" class="conditional-block">
         <div class="mb-3">
           <label class="form-label">Диаметр</label>
@@ -97,7 +96,6 @@
         </div>
       </div>
 
-      <!-- Самотек блок -->
       <div id="block-samotek" class="conditional-block">
         <div class="mb-3">
           <label class="form-label">Диаметр</label>
@@ -118,65 +116,16 @@
       </div>
     </div>
 
-    <div id="section-sinter" class="analyzer-section">
-      <h5>Шихта / руда</h5>
-      <div class="mb-3">
-        <label class="form-label">Оборудование дробления/подачи</label>
-        <textarea name="equipment_feed" class="form-control"></textarea>
-      </div>
-    </div>
+    <!-- остальные секции остаются без изменений -->
 
-    <div id="section-multiplex" class="analyzer-section">
-      <h5>Пульпа с мультиплексором</h5>
-      <div class="mb-3">
-        <label class="form-label">Количество потоков</label>
-        <input type="number" name="multiplex_streams" class="form-control">
-      </div>
-    </div>
-
-    <div id="section-courier" class="analyzer-section">
-      <h5>Пульпа с мультиплексором (Курьер)</h5>
-      <div class="mb-3">
-        <label class="form-label">Место установки нового анализатора</label>
-        <input type="text" name="kurier_location" class="form-control">
-      </div>
-    </div>
-
-    <button type="submit" class="btn btn-primary mt-3">Отправить</button>
-  </form>
-</div>
-
-<script>
-  function addElementRow(containerId) {
-    const container = document.getElementById(containerId);
-    const row = document.createElement('div');
-    row.className = 'element-row';
-    row.innerHTML = `
-      <input type="text" name="${containerId}_element[]" placeholder="Элемент" class="form-control">
-      <input type="text" name="${containerId}_range[]" placeholder="Диапазон (%)" class="form-control">
-      <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">✖</button>
-    `;
-    container.appendChild(row);
-  }
-
-  document.getElementById('material').addEventListener('change', function() {
-    const sections = document.querySelectorAll('.analyzer-section');
-    sections.forEach(s => s.style.display = 'none');
-    const selected = this.value;
-    const target = document.getElementById(`section-${selected}`);
-    if (target) target.style.display = 'block';
-  });
-
-  document.getElementById('feed_type').addEventListener('change', function () {
-    document.getElementById('block-naporny').style.display = 'none';
-    document.getElementById('block-samotek').style.display = 'none';
-    if (this.value === 'naporny') {
-      document.getElementById('block-naporny').style.display = 'block';
-    } else if (this.value === 'samotek') {
-      document.getElementById('block-samotek').style.display = 'block';
-    }
-  });
-</script>
-
-</body>
-</html>
+    <script>
+      document.getElementById('feed_type').addEventListener('change', function () {
+        document.getElementById('block-naporny').style.display = 'none';
+        document.getElementById('block-samotek').style.display = 'none';
+        if (this.value === 'naporny') {
+          document.getElementById('block-naporny').style.display = 'block';
+        } else if (this.value === 'samotek') {
+          document.getElementById('block-samotek').style.display = 'block';
+        }
+      });
+    </script>
