--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </div>
     </div>
 
+    <!-- Выпадающий список выбора материала -->
     <div class="mb-3">
       <label for="material" class="form-label">Тип анализируемого материала</label>
       <select id="material" name="material" class="form-select" required>
@@ -62,59 +63,80 @@
       </select>
     </div>
 
-    <div id="section-pulp" class="analyzer-section">
-      <h5>Пульпа: оборудование</h5>
+    <!-- Секция для шихты -->
+    <div id="section-sinter" class="analyzer-section">
+      <h5>Шихта / руда: оборудование</h5>
       <div class="mb-3">
-        <label class="form-label">Количество точек для анализа</label>
-        <input type="number" name="streams" class="form-control">
-      </div>
-      <div class="mb-3">
-        <label class="form-label">Характеристика подачи питания</label>
-        <select name="feed_type" id="feed_type" class="form-select">
+        <label class="form-label">Рассматриваются анализаторы</label>
+        <select name="analyzer_type" class="form-select">
           <option value="">Выберите...</option>
-          <option value="naporny">Напорный</option>
-          <option value="samotek">Самотек</option>
+          <option value="arp-1c">АРП-1Ц</option>
+          <option value="arp-2c">АРП-2Ц</option>
         </select>
       </div>
-      <div id="block-naporny" class="conditional-block">
-        <div class="mb-3">
-          <label class="form-label">Диаметр</label>
-          <input type="text" name="naporny_diameter" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Материал (нерж. сталь, резиновая футеровка и т.д.)</label>
-          <input type="text" name="naporny_material" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Давление нагнетания (кПа)</label>
-          <input type="text" name="pressure" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Температура окружающей среды (мин/макс)</label>
-          <input type="text" name="temperature" class="form-control">
-        </div>
+      <div class="mb-3">
+        <label class="form-label">Скорость ленты (м/с)</label>
+        <input type="text" name="belt_speed" class="form-control">
       </div>
-      <div id="block-samotek" class="conditional-block">
-        <div class="mb-3">
-          <label class="form-label">Диаметр</label>
-          <input type="text" name="samotek_diameter" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Материал (нерж. сталь, резиновая футеровка и т.д.)</label>
-          <input type="text" name="samotek_material" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Угол разгрузки (в градусах)</label>
-          <input type="text" name="unload_angle" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Температура окружающей среды (мин/макс)</label>
-          <input type="text" name="temperature2" class="form-control">
-        </div>
+      <div class="mb-3">
+        <label class="form-label">Нагрузка на ленте (тонн/час, мин/макс)</label>
+        <input type="text" name="belt_load" class="form-control">
       </div>
     </div>
 
-    <script>
+    <div id="section-pulp" class="analyzer-section">
+  <h5>Пульпа: оборудование</h5>
+  <div class="mb-3">
+    <label class="form-label">Количество точек для анализа</label>
+    <input type="number" name="streams" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label class="form-label">Характеристика подачи питания</label>
+    <select name="feed_type" id="feed_type" class="form-select">
+      <option value="">Выберите...</option>
+      <option value="naporny">Напорный</option>
+      <option value="samotek">Самотек</option>
+    </select>
+  </div>
+  <div id="block-naporny" class="conditional-block">
+    <div class="mb-3">
+      <label class="form-label">Диаметр</label>
+      <input type="text" name="naporny_diameter" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Материал (нерж. сталь, резиновая футеровка и т.д.)</label>
+      <input type="text" name="naporny_material" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Давление нагнетания (кПа)</label>
+      <input type="text" name="pressure" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Температура окружающей среды (мин/макс)</label>
+      <input type="text" name="temperature" class="form-control">
+    </div>
+  </div>
+  <div id="block-samotek" class="conditional-block">
+    <div class="mb-3">
+      <label class="form-label">Диаметр</label>
+      <input type="text" name="samotek_diameter" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Материал (нерж. сталь, резиновая футеровка и т.д.)</label>
+      <input type="text" name="samotek_material" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Угол разгрузки (в градусах)</label>
+      <input type="text" name="unload_angle" class="form-control">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Температура окружающей среды (мин/макс)</label>
+      <input type="text" name="temperature2" class="form-control">
+    </div>
+  </div>
+</div>
+
+<script>
       document.getElementById('material').addEventListener('change', function () {
         const sections = document.querySelectorAll('.analyzer-section');
         sections.forEach(s => s.style.display = 'none');
@@ -122,17 +144,16 @@
         const target = document.getElementById(`section-${selected}`);
         if (target) target.style.display = 'block';
       });
-
       document.getElementById('feed_type').addEventListener('change', function () {
-        document.getElementById('block-naporny').style.display = 'none';
-        document.getElementById('block-samotek').style.display = 'none';
-        if (this.value === 'naporny') {
-          document.getElementById('block-naporny').style.display = 'block';
-        } else if (this.value === 'samotek') {
-          document.getElementById('block-samotek').style.display = 'block';
-        }
-      });
-    </script>
+    document.getElementById('block-naporny').style.display = 'none';
+    document.getElementById('block-samotek').style.display = 'none';
+    if (this.value === 'naporny') {
+      document.getElementById('block-naporny').style.display = 'block';
+    } else if (this.value === 'samotek') {
+      document.getElementById('block-samotek').style.display = 'block';
+    }
+  });
+</script>
 
   </form>
 </div>
