--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
     </div>
 
     <!-- Выпадающий список выбора материала -->
-    $1
+    <div class="mb-3">
+  <label for="material" class="form-label">Тип анализируемого материала</label>
+  <select id="material" name="material" class="form-select" required>
+    <option value="">Выберите...</option>
+    <option value="pulp">Пульпа (1–3 потока для анализа)</option>
+    <option value="sinter">Шихта / руда</option>
+    <option value="multiplex">Пульпа с мультиплексором</option>
+    <option value="courier">Пульпа с мультиплексором (на замену анализатора Курьер)</option>
+  </select>
+</div>
 
 <div id="section-sinter" class="analyzer-section">
   <h5>Шихта / руда: оборудование</h5>
