--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <input type="text" name="belt_load" class="form-control">
   </div>
   <div class="mb-3">
-    <h3>Анализируемые элементы от Ca до U + диапазон концентраций</h3>
+    <h5>Анализируемые элементы от Ca до U + диапазон концентраций</h5>
     <div id="sinter-elements-ca-u"></div>
     <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('sinter-elements-ca-u')">+ Добавить элемент</button>
   </div>
@@ -104,69 +104,54 @@
   </div>
 </div>
 
-<div id="section-pulp" class="analyzer-section">
-  <h5>Пульпа: оборудование</h5>
+    $1
+
+$1
+
   <div class="mb-3">
-    <label class="form-label">Количество точек для анализа</label>
-    <input type="number" name="streams" class="form-control">
-  </div>
-  <div class="mb-3">
-    <label class="form-label">Характеристика подачи питания</label>
-    <select name="feed_type" id="feed_type" class="form-select">
-      <option value="">Выберите...</option>
-      <option value="naporny">Напорный</option>
-      <option value="samotek">Самотек</option>
-    </select>
-  </div>
-  <div id="block-naporny" class="conditional-block">
-    <div class="mb-3">
-      <label class="form-label">Диаметр</label>
-      <input type="text" name="naporny_diameter" class="form-control">
+    <h5>Дополнительные условия</h5>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="xrf_lab" name="xrf_lab">
+      <label class="form-check-label" for="xrf_lab">Наличие РФА-лаборатории на предприятии</label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="personnel_access" name="personnel_access">
+      <label class="form-check-label" for="personnel_access">Допуск персонала к источникам</label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
+      <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
-      <label class="form-label">Материал (нерж. сталь, резиновая футеровка и т.д.)</label>
-      <input type="text" name="naporny_material" class="form-control">
+      <label class="form-label" for="installation_location">Местонахождение установки</label>
+      <input type="text" class="form-control" id="installation_location" name="installation_location">
     </div>
     <div class="mb-3">
-      <label class="form-label">Давление нагнетания (кПа)</label>
-      <input type="text" name="pressure" class="form-control">
+      <label class="form-label" for="water_composition">Состав оборотной воды</label>
+      <input type="text" class="form-control" id="water_composition" name="water_composition">
     </div>
-    <div class="mb-3">
-      <label class="form-label">Температура окружающей среды (мин/макс)</label>
-      <input type="text" name="temperature" class="form-control">
-    </div>
-  </div>
-  <div id="block-samotek" class="conditional-block">
-    <div class="mb-3">
-      <label class="form-label">Диаметр</label>
-      <input type="text" name="samotek_diameter" class="form-control">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Материал (нерж. сталь, резиновая футеровка и т.д.)</label>
-      <input type="text" name="samotek_material" class="form-control">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Угол разгрузки (в градусах)</label>
-      <input type="text" name="unload_angle" class="form-control">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Температура окружающей среды (мин/макс)</label>
-      <input type="text" name="temperature2" class="form-control">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
+      <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
     </div>
   </div>
 
-  <div class="mb-3">
-    <h5>Анализируемые элементы от Ca до U + диапазон концентраций</h5>
-    <div id="elements-ca-u"></div>
-    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('elements-ca-u')">+ Добавить элемент</button>
+<div class="mb-3">
+  <h5>Основные анализируемые элементы и диапазоны их содержаний (в границах от 0,1 до 70)</h5>
+    <div id="main-elements"></div>
+    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('main-elements')">+ Добавить элемент</button>
   </div>
-
   <div class="mb-3">
-    <h5>Анализ легких химических элементов</h5>
-    <div id="light-elements"></div>
-    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('light-elements')">+ Добавить элемент</button>
+  <h5>Анализируемые элементы от Ca до U + диапазон концентраций</h5>
+  <div id="elements-ca-u"></div>
+  <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('elements-ca-u')">+ Добавить элемент</button>
+</div>
+    <div class="mb-3">
+  <h5>Анализ легких химических элементов</h5>
+  <div id="light-elements"></div>
+  <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('light-elements')">+ Добавить элемент</button>
+</div>
   </div>
-
   <div class="mb-3">
     <label class="form-label">Плотность</label>
     <input type="text" name="density" class="form-control">
@@ -188,26 +173,22 @@
     <input type="text" name="reagents" class="form-control">
   </div>
 </div>
-  <div id="block-samotek" class="conditional-block">
-    <div class="mb-3">
-      <label class="form-label">Диаметр</label>
-      <input type="text" name="samotek_diameter" class="form-control">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Материал (нерж. сталь, резиновая футеровка и т.д.)</label>
-      <input type="text" name="samotek_material" class="form-control">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Угол разгрузки (в градусах)</label>
-      <input type="text" name="unload_angle" class="form-control">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Температура окружающей среды (мин/макс)</label>
-      <input type="text" name="temperature2" class="form-control">
-    </div>
+  <div class="mb-3">
+    <label class="form-label">Скорость ленты (м/с)</label>
+    <input type="text" name="belt_speed" class="form-control">
   </div>
+  <div class="mb-3">
+    <label class="form-label">Нагрузка на ленте (тонн/час, мин/макс)</label>
+    <input type="text" name="belt_load" class="form-control">
+  </div>
+</div>
 
-
+    
+  <div class="mb-3">
+    <h5>Основные анализируемые элементы и диапазоны их содержаний (в границах от 0,1 до 70)</h5>
+    <div id="main-elements"></div>
+    <button type="button" class="btn btn-outline-primary btn-sm" onclick="addElementRow('main-elements')">+ Добавить элемент</button>
+  </div>
 
 <script>
   function addElementRow(containerId) {
